# AI-Engine

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  cspell.json  package-lock.json  package.json  render.yaml  soroban.toml
.github/workflows/: ci.yml  deploy.yml
contracts/payment-router/: Cargo.toml
contracts/payment-router/src/: conditions.rs  contract.rs  errors.rs  governance.rs  lib.rs  policy.rs  routing.rs  storage.rs  test.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: errors.rs  events.rs  governance.rs  lib.rs  types.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: allocation.rs  contract.rs  errors.rs  governance.rs  lib.rs  policy.rs  storage.rs  test.rs
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/src/: client.rs  lib.rs  policy.rs  retry.rs  types.rs  wallet.rs
docs/: API.md  CONTRIBUTING-WAVE.md  DEPLOYMENT.md  PRD.md  ROADMAP.md  SECURITY.md
tests/contracts/: README.md
tests/integration/: governance.test.ts  policy.test.ts  treasury-router.test.ts
